9.136:kanban @ dark mode: fix bottom gradient

--- a/css/styl/variables.styl
+++ b/css/styl/variables.styl
@@ -14,6 +14,9 @@
     --purple-color-strong: #dcf;
     --red-color-strong: #fcc;
     --yellow-color-strong: #fff7aa;
+
+    --kanban-fade-from-color: rgba(255, 255, 255, 0);
+    --kanban-fade-to-color: rgba(255, 255, 255, 1);
 }
 
 [data-theme="dark"] {
@@ -32,6 +35,9 @@
     --purple-color-strong: #dcf;
     --red-color-strong: #fcc;
     --yellow-color-strong: #fff7aa;
+
+    --kanban-fade-from-color: rgba(0, 0, 0, 0);
+    --kanban-fade-to-color: rgba(0, 0, 0, 1);
 }
 
 $white_color = var(--white-color);
